--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,7 +10,7 @@ div{
 .container{
     width: 1400px;
     margin: 0 auto;
-    background-color: pink;
+    /* background-color: pink; */
     padding: 30px 0;
     /* height: 750px; */
 }
