--- a/src/assets/css/mHeaderFooter/mfooter.css
+++ b/src/assets/css/mHeaderFooter/mfooter.css
@@ -1,17 +1,41 @@
 /* 메니저 페이지 공통 푸터 */
+
 .mfooter{
-    background-color: #626262;
+    background-color: #202020;
     color: white;
-    padding: 20px 0;
+    padding: 50px 0;
 }
 .mfooter .mfooterWrap{
-    width: 1200px;
+    width: 1500px;
     margin: 0 auto;
 }
+/* 푸터 윗부분 */
 .mfooter .mfooterWrap .mfooterTop{
     display: flex;
     justify-content: space-between;
+    align-items: end;
 }
-.mfooter .mfooterWrap .mfooterBtm{
-    /* text-align: center; */
+
+/* 푸터 정보 */
+.mfooter .mfooterWrap .mfooterTop .mfotterInfo{
+    margin-bottom: 30px;
+}
+.mfooter .mfooterWrap .mfooterTop .mfotterInfo p{
+    line-height: 30px;
+}
+.mfooter .mfooterWrap .mfooterTop .mfotterInfo div{
+    display: flex;
+}
+.mfooter .mfooterWrap .mfooterTop .mfotterInfo div p::after{
+    content: '|';
+    padding: 0 10px;
+}
+.mfooter .mfooterWrap .mfooterTop .mfotterInfo div p:last-child::after{
+    content: '';
+}
+
+/* 푸터 sns */
+.mfooter .mfooterWrap .mfooterTop .mfooterSns a img{
+    width: 35px;
+    margin: 0 20px 30px 0;
 }
