ㅇㅅ 탑버튼 생성

--- a/src/assets/css/mypage/reserve.css
+++ b/src/assets/css/mypage/reserve.css
@@ -150,6 +150,9 @@
 }
 .mypageContainer .mpDiaryConfirmContainer .mpdcContents .mpdcImg img{
     width: 200px;
+    height: 200px;
+    object-fit: contain;
+    border-radius: 15px;
 }
 /* 알림장 내용 -알림장 내용 */
 .mypageContainer .mpDiaryConfirmContainer .mpdcContents .mpdcInfo1 {
