--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -1,33 +1,38 @@
-.headerSideBar {
+/* 반려견 등록페이지 */
+#petAddForm {
     display: flex;
 }
 
-/* 반려견 등록페이지 */
 /* 사이드바 */
 .sidebar {
-    width: 280px;
-    background-color: #ddeee4;
-    border-radius: 5px;
-}
-
-.sidebar .profile {
-    width: 220px;
-    height: 150px;
-    margin: 20px 0 20px 20px;
-    display: flex;
-    /* background-color: red; */
+    width: 250px;
+    /* height: 1000px; */
+    box-shadow: 15px 15px 5px -15px gray;
     border-bottom: 1px solid black;
 }
 
+.sidebar .profile {
+    width: 150px;
+    height: 150px;
+    margin: 100px 0 20px 20px;
+}
+
 .sidebar .profile img {
-    width: 100px;
-    height: 100px;
+    width: 170px;
+    height: 170px;
     border-radius: 50%;
 }
 
 
 .sidebar .profileId {
-    margin: 50px 0 0 20px;
+    /* background-color: red; */
+    width: 170px;
+    height: 30px;
+    text-align: center;
+}
+
+.sidebar .profileId label {
+    padding: 7px;
 }
 
 .sidebar .profileId label:first-child {
@@ -39,7 +44,12 @@
     height: 10px;
 }
 
-
+.sidebar .profilePetBox {
+    background-color: #e6e5e5;
+    border-radius: 20px;
+    padding-bottom: 100px;
+    position: relative;
+}
 
 
 .sidebar .profilePet {
@@ -48,8 +58,9 @@
 
 .sidebar .profileTitle {
     display: flex;
-    justify-content: space-between;
     margin-bottom: 20px;
+    margin-top: 120px;
+    padding-top: 30px;
 }
 
 .sidebar .profileTitle p {
@@ -57,44 +68,37 @@
     margin-left: 20px;
 }
 
-.sidebar .profileTitle button {
-    margin-right: 15px;
-    width: 20px;
-    /* font-weight: bold; */
-    font-size: 15px;
-    background-color: white;
-    border: 1px solid black;
-}
 
 .sidebar .profilePet {
     margin: 20px 0 20px 20px;
-    /* background-color: red; */
+    width: 180px;
+    border-bottom: 1px solid #236C3F;
 }
 
 .sidebar .profilePet img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 20px;
+    border-radius: 10%;
 }
 
 .sidebar .profilePet p {
-    width: 110px;
-    height: 50px;
-    text-align: center;
+    width: 90px;
+    margin-left: 10px;
     margin-top: 30px;
     /* background-color: red; */
 
 }
 
 #petAddForm h1 {
-    margin: 50px 0 0 50px;
+    margin: 50px 0 50px 50px;
     font-size: 30px;
 }
 
 
 /* petAddForm */
 #petAddForm .container form {
-    /* margin: 0 auto; */
+    margin: 0 auto;
     width: 1000px;
     /* border: 1px solid black; */
 }
@@ -119,21 +123,58 @@
     font-weight: bold;
 }
 
-#petAddForm .container form .petPhoto {
-    width: 290px;
-    height: 290px;
+/* #petAddForm .container form .petPhoto {
+    width: 300px;
+    height: 350px;
     border: 1px solid #a7a4a4;
-    background-image: url('@/assets/images/profile_sample.png');
     background-repeat: no-repeat;
     background-size: cover;
+    
+} */
+.filebox input[type="file"] {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    /* clip:rect(0,0,0,0); */
+    /* border: 1px solid black; */
 }
 
+.filebox label {
+    margin-left: 330px;
+    display: inline-block;
+    padding: .5em .75em;
+    color: white;
+    font-size: inherit;
+    line-height: normal;
+    vertical-align: middle;
+    background-color: #236C3F;
+    border-radius: .25em;
+}
 
-/* #petAddForm .container form .petPhoto img {
-    width: 60px;
-    margin-top: 2px;
-    opacity: 0.5;
-} */
+/* named upload */
+.filebox .upload-name {
+    display: inline-block;
+    padding: .5em .75em;
+    /* label의 패딩값과 일치 */
+    font-size: inherit;
+    font-family: inherit;
+    line-height: normal;
+    vertical-align: middle;
+    background-color: #f5f5f5;
+    border: 1px solid #ebebeb;
+    border-bottom-color: #e2e2e2;
+    border-radius: .25em;
+    -webkit-appearance: none;
+    /* 네이티브 외형 감추기 */
+    -moz-appearance: none;
+    appearance: none;
+}
+
+#petAddForm #preview-image {
+    width: 400px;
+    height: 500px;
+}
 
 #petAddForm .container .detail {
     padding-left: 25px;
@@ -183,10 +224,8 @@
     font-size: 16px;
 }
 
-#petAddForm .container #feature .bite input {
-    width: 50px;
-    margin-left: -5px;
-    margin-right: 10px;
+#petAddForm .container #feature .bite input, datalist {
+    width: 200px;
 }
 
 #petAddForm .container #feature button {
@@ -371,7 +410,7 @@
     padding-left: 100px;
 }
 
-#myDiary .context div{
+#myDiary .context div {
     height: 50px;
 }
 
@@ -380,6 +419,3 @@
     width: 200px;
     font-weight: bold;
 }
-
-
-
