ㅇㅅ 탑버튼, edit슬라이드 버튼 수정

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,7 +10,7 @@ div{
 .container{
     width: 1400px;
     margin: 0 auto;
-    background-color: pink;
+    /* background-color: pink; */
     padding: 30px 0;
     /* height: 750px; */
 }
@@ -22,7 +22,7 @@ a{
     text-decoration: none;
 }
 
-/* 스크롤 탑버튼 */
+/*=============== 스크롤 탑버튼 ===============*/
 a.toScrollButton{
     position: fixed;
     right: 30px;
