--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -28,7 +28,8 @@ a.toScrollButton{
     right: 30px;
     bottom: 50px;
     padding-top: 5px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    border-radius: 50px;
     color: #ffffff;
     text-align: center;
     width: 65px;
