--- a/src/assets/css/manager/totalsales.css
+++ b/src/assets/css/manager/totalsales.css
@@ -1,41 +1,44 @@
 /* total-container 스타일 */
 .total-container {
+    margin: 0 auto;
     width: 1500px;
-    display: flex; /* Flexbox 사용 */
-    justify-content: space-between; /* 요소들을 양쪽에 배치 */
-    gap: 20px; /* 요소들 간의 간격 설정 */
-    flex-direction: row; /* 요소들을 세로 정렬 */
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 /* 그래프 컨테이너 스타일 */
 .chart-container {
-    width: 1000px; /* 그래프 컨테이너의 너비를 반으로 설정 */
-    max-width: 400px;
-    display: block; /* Flexbox 사용 */
-    margin-bottom: 20px; /* 아래 여백 추가 */
-    padding: 20px;
+    margin-top: 20px; 
+    margin-bottom: 20px;
+    width: 48%;
+    height: 500px;
+    padding: 40px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.chart-content {
+    flex-grow: 1;
 }
 
 /* 엑셀 표 스타일 */
 .sales-table {
-    width: calc(50% - 20px); /* 표의 너비를 반으로 설정 */
-    margin-left: auto; /* 왼쪽 여백을 최대화하여 오른쪽으로 정렬 */
-}
-
-.sales-table table {
-    width: 100%; /* 표 전체 너비로 설정 */
+    width: 100%;
+    /* margin-top: 20px; */
     border-collapse: collapse;
-    border-radius: 5px;
 }
 
 .sales-table th,
 .sales-table td {
     border: 1px solid #ddd;
-    padding: 12px;
-    text-align: center;
+    padding: 13px;
+    /* text-align: center; */
+    font-size: 10px;
 }
 
 .sales-table th {
@@ -45,9 +48,7 @@
 
 /* Total Sales 스타일 */
 .total-sales {
-    width: calc(50% - 20px); /* 총 매출 컨테이너의 너비를 반으로 설정 */
-    max-width: 400px;
-    margin-top: 20px; /* 위쪽 여백 추가 */
-    margin-left: auto; /* 왼쪽 여백을 최대화하여 오른쪽으로 정렬 */
+    margin-top: 10px;
+    font-weight: bold;
     text-align: center;
 }
