--- a/src/assets/css/mypage/sidebar.css
+++ b/src/assets/css/mypage/sidebar.css
@@ -1,34 +1,37 @@
-
 /* 사이드바 */
 .sidebar {
     width: 250px;
     /* height: 1000px; */
-    box-shadow: 15px 15px 5px -15px gray;
-    border-bottom: 1px solid black;
+    box-shadow: 15px 0px 5px -15px gray;
+    /* border-bottom: 1px solid black; */
+    /* background-color: forestgreen; */
+    position: sticky;
+    top: 138px;
+    left: 50px;
 }
 
+/* 유저 프로필 */
 .sidebar .profile {
-    width: 150px;
-    height: 150px;
-    margin: 100px 0 20px 20px;
+    /* background-color: fuchsia; */
+    border-bottom: 1px solid #ddd;
+    padding: 30px 0;
 }
-
+/* 프로필 사진 */
+.sidebar .profile .profileImg{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
 .sidebar .profile img {
     width: 170px;
     height: 170px;
     border-radius: 50%;
 }
 
-
+/* 프로필 내용 */
 .sidebar .profileId {
     /* background-color: red; */
-    width: 170px;
-    height: 30px;
     text-align: center;
-}
-
-.sidebar .profileId label {
-    padding: 7px;
 }
 
 .sidebar .profileId label:first-child {
@@ -40,48 +43,52 @@
     height: 10px;
 }
 
+/* 동물프로필 */
 .sidebar .profilePetBox {
     background-color: #e6e5e5;
     border-radius: 20px;
-    padding-bottom: 100px;
-    position: relative;
+    padding: 20px;
+    /* padding-bottom: 100px; */
 }
 
-
-.sidebar .profilePet {
-    display: flex;
-}
-
+/* 반려견 등록 윗부분 */
 .sidebar .profileTitle {
     display: flex;
-    margin-bottom: 20px;
-    margin-top: 120px;
-    padding-top: 30px;
+    /* padding-bottom: 20px; */
+    /* background-color: chartreuse; */
 }
-
 .sidebar .profileTitle p {
     font-weight: bold;
-    margin-left: 20px;
+}
+.sidebar .profilePet {
+    display: flex;
 }
 
-
-.sidebar .profilePet {
-    margin: 20px 0 20px 20px;
-    width: 180px;
+/* 반려견 프로필 박스 */
+.sidebar .petProfileBox{
+    /* background-color: sandybrown; */
+}
+.sidebar .petProfileBox .profilePet {
+    margin: 0 auto;
+    padding: 20px 0;
     border-bottom: 1px solid #236C3F;
 }
+.sidebar .petProfileBox .profilePet:last-child{
+    border-bottom: none;
+}
+.sidebar .petProfileBox .profilePet:first-child{
+    /* background-color: yellow; */
+}
 
-.sidebar .profilePet img {
+.sidebar .petProfileBox .profilePet img {
     width: 80px;
     height: 80px;
-    margin-bottom: 20px;
+    object-fit: cover;
     border-radius: 10%;
 }
 
-.sidebar .profilePet p {
-    width: 90px;
-    margin-left: 10px;
-    margin-top: 30px;
-    /* background-color: red; */
-
+.sidebar .petProfileBox .profilePet p {
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
 }
