지원이 스케줄

--- a/src/assets/css/manager/totalsales.css
+++ b/src/assets/css/manager/totalsales.css
@@ -9,6 +9,7 @@
 
 /* 그래프 컨테이너 스타일 */
 .chart-container {
+    object-fit: contain;
     margin-top: 20px; 
     margin-bottom: 20px;
     width: 48%;
