--- a/src/assets/css/mypage/sidebar.css
+++ b/src/assets/css/mypage/sidebar.css
@@ -1,13 +1,15 @@
 /* 사이드바 */
 .sidebar {
-    width: 250px;
+    /* width: 250px; */
+    width: 240px;
     /* height: 1000px; */
-    box-shadow: 15px 0px 5px -15px gray;
+    box-shadow: 15px 5px 5px -15px gray;
     /* border-bottom: 1px solid black; */
     /* background-color: forestgreen; */
-    position: sticky;
+    position: fixed;
     top: 138px;
     left: 50px;
+    z-index: 999;
 }
 
 /* 유저 프로필 */
@@ -45,7 +47,7 @@
 
 /* 동물프로필 */
 .sidebar .profilePetBox {
-    background-color: #e6e5e5;
+    /* background-color: #e6e5e5; */
     border-radius: 20px;
     padding: 20px;
     /* padding-bottom: 100px; */
