--- a/src/assets/css/manager/totalsales.css
+++ b/src/assets/css/manager/totalsales.css
@@ -1,55 +1,53 @@
 /* total-container 스타일 */
 .total-container {
-    margin: 0 auto;
-    width: 1500px;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    margin: 0 auto; /* 가운데 정렬 */
+    width: 1500px; /* 너비 설정 */
+    display: flex; /* Flexbox 레이아웃 적용 */
+    justify-content: space-around; /* 주변 여백을 공간으로 나누어 요소를 가운데 정렬 */
+    flex-wrap: wrap; /* 요소들이 넘치면 자동으로 줄바꿈 */
 }
 
 /* 그래프 컨테이너 스타일 */
 .chart-container {
-    object-fit: contain;
-    margin-top: 20px; 
-    margin-bottom: 20px;
-    width: 48%;
-    height: 500px;
-    padding: 40px;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    object-fit: contain; /* 요소 내부에서 이미지나 비디오의 크기와 관련된 속성을 지정 */
+    margin-top: 20px; /* 위쪽 여백 */
+    margin-bottom: 20px; /* 아래쪽 여백 */
+    width: 48%; /* 너비 설정 */
+    height: 500px; /* 높이 설정 */
+    padding: 40px; /* 내부 여백 */
+    border: 1px solid #ccc; /* 테두리 설정 */
+    border-radius: 20px; /* 테두리 둥글게 설정 */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
+    display: flex; /* Flexbox 레이아웃 적용 */
+    flex-direction: column; /* 세로 방향으로 요소들을 정렬 */
+    justify-content: space-between; /* 요소들을 상하로 균등하게 배치 */
 }
 
 .chart-content {
-    flex-grow: 1;
+    flex-grow: 1; /* 남은 공간을 차지하도록 설정 */
 }
 
 /* 엑셀 표 스타일 */
 .sales-table {
-    width: 100%;
-    /* margin-top: 20px; */
-    border-collapse: collapse;
+    width: 100%; /* 너비 100%로 설정 */
+    border-collapse: collapse; /* 테두리가 서로 겹치도록 설정 */
 }
 
 .sales-table th,
 .sales-table td {
-    border: 1px solid #ddd;
-    padding: 13px;
-    /* text-align: center; */
-    font-size: 10px;
+    border: 1px solid #ddd; /* 테두리 설정 */
+    padding: 13px; /* 내부 여백 */
+    font-size: 10px; /* 글꼴 크기 설정 */
 }
 
 .sales-table th {
-    background-color: #f2f2f2;
-    font-weight: bold;
+    background-color: #f2f2f2; /* 배경색 설정 */
+    font-weight: bold; /* 굵은 글꼴 설정 */
 }
 
 /* Total Sales 스타일 */
 .total-sales {
-    margin-top: 10px;
-    font-weight: bold;
-    text-align: center;
+    margin-top: 10px; /* 위쪽 여백 */
+    font-weight: bold; /* 굵은 글꼴 설정 */
+    text-align: center; /* 가운데 정렬 */
 }
