--- a/src/assets/css/manager/diary.css
+++ b/src/assets/css/manager/diary.css
@@ -81,8 +81,9 @@
     padding: 10px; /* 안쪽 여백 */
     border: none; /* 테두리 없음 */
     border-radius: 20px; /* 둥근 테두리 */
-    background-color: #4CAF50; /* 배경색 */
+    background-color: #ffd700; /* 배경색 */
     color: white; /* 글자색 */
+    font: bolder;
     font-size: 1.2em; /* 폰트 크기 */
     cursor: pointer; /* 포인터 커서 설정 */
     margin-top: 10px; /* 위 여백 */
@@ -92,7 +93,7 @@
 .diary-save-button:hover,
 .diary-edit-button:hover,
 .diary-send-button:hover {
-    background-color: #45a049; /* 배경색 변경 */
+    background-color: #ffd700; /* 배경색 변경 */
 }
 
 /* 취소 버튼 디자인 */
