--- a/src/assets/css/mypage/sidebar.css
+++ b/src/assets/css/mypage/sidebar.css
@@ -73,7 +73,7 @@
 .sidebar .petProfileBox .profilePet {
     margin: 0 auto;
     padding: 20px 0;
-    border-bottom: 1px solid #236C3F;
+    border-bottom: 1px solid #ddd;
 }
 .sidebar .petProfileBox .profilePet:last-child{
     border-bottom: none;
