--- a/src/assets/css/mypage/review.css
+++ b/src/assets/css/mypage/review.css
@@ -17,7 +17,8 @@
 
 .reviewCon02 {
     width: 300px;
-    background-color: #efeeee;
+    /* background-color: #efeeee; */
+    border: 1px solid #dddddd;
     border-radius: 20px;
     margin-right: 20px;
     margin-top: 20px;
@@ -35,8 +36,8 @@
     margin-left: 20px;
 }
 .reviewCon02 .mypetImgSlider img {
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 25px;
+    margin-left: 25px;
     width: 250px;
     height: 280px;
     border-radius: 20px;
@@ -50,3 +51,4 @@
     border-top: 1px solid black;
     padding-top: 5px;
 }
+
